syntax = "proto3";

// Specify the Go package location and import path
option go_package = "/internal/api/protobufs/gst-service;protobufs";

service GSTR1AService {
    rpc SaveGSTR1A (GSTR1ARequest) returns (GSTR1AResponse);
    rpc SubmitGSTR1A (GSTR1ASubmitRequest) returns (GSTR1ASubmitResponse);
    rpc FileGSTR1A (GSTR1AFileRequest) returns (GSTR1AFileResponse);
    rpc GetGSTR1AStatus (GSTR1AStatusRequest) returns (GSTR1AStatusResponse);
}

message GSTR1ARequest {
    string gstin = 1;
    string return_period = 2;
    repeated GSTR1AInvoice invoices = 3;
}

message GSTR1AInvoice {
    string invoice_number = 1;
    string invoice_date = 2;
    string gstin_supplier = 3;
    string gstin_receiver = 4;
    string taxable_value = 5;
    string tax_amount = 6;
    string hsn_code = 7;
    string place_of_supply = 8;
    string action = 9; // Action can be "accept", "reject", or "modify"
}

message GSTR1AResponse {
    string ref_id = 1;
    string status = 2;
}

message GSTR1ASubmitRequest {
    string gstin = 1;
    string return_period = 2;
}

message GSTR1ASubmitResponse {
    string arn = 1;
    string status = 2;
}

message GSTR1AFileRequest {
    string gstin = 1;
    string return_period = 2;
    string arn = 3;
}

message GSTR1AFileResponse {
    string filing_status = 1;
    string message = 2;
}

message GSTR1AStatusRequest {
    string gstin = 1;
    string return_period = 2;
    string arn = 3;
}

message GSTR1AStatusResponse {
    string status = 1;
    string message = 2;
}
